little refactoring get recipes by telegram id
